[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/electric_node.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerRewind.gd" type="Script" id=2]
[ext_resource path="res://sounds/continuous_zap.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/select.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[node name="PlayerRewind" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
hframes = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Select" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 2

[node name="AudioZap" type="AudioStreamPlayer2D" parent="."]
volume_db = -25.0
bus = "Sound"

[node name="AudioZapCont" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -35.0
bus = "Sound"
[connection signal="input_event" from="Area2D" to="." method="_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_mouse_enter"]
[connection signal="mouse_exited" from="Area2D" to="." method="_mouse_exit"]
